# seed-qt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
interfaces/: IBusiness.h  IComms.h  IDb.h
src/: CMakeLists.txt
src/qtSeedApp/: CMakeLists.txt  main.cpp
src/qtSeedApp/Logic/: BusinessLogic.cpp  BusinessLogic.h  CMakeLists.txt  Types.h
src/qtSeedApp/Views/: Dashboard.cpp  Dashboard.h  PatientDialog.cpp  PatientDialog.h  PatientHelper.h  PatientList.cpp  PatientList.h
src/qtSeedApp/qml/: Configuration.qml  Login.qml  PatientArea.qml  SideBar.qml  main.qml  qml.qrc
src/qtSeedApp/qml/elements/: AddNewPatientButton.qml  LoadingPatientsAnimation.qml  PatientListDelegate.qml
src/qtSeedBusiness/: BusinessDefinitions.h  BusinessLogic.cpp  BusinessLogic.h
src/qtSeedComms/: CMakeLists.txt  Comms.cpp  Comms.h  IComms.h  MessageHelper.cpp  MessageHelper.h
src/qtSeedDb/: CMakeLists.txt  DbManager.cpp  DbManager.h  IDb.h
src/qtSeedUI/: CMakeLists.txt  Dashboard.cpp  Dashboard.h  NewPatientDlg.cpp  NewPatientDlg.h  PatientDialog.cpp  PatientDialog.h  PatientList.cpp  PatientList.h
src/qtSeedUI/qml/: Configuration.qml  Dashboard.qml  NewPatient.qml  PatientArea.qml  PatientDelegate.qml  PatientDialog.qml  SideBar.qml  main.qml  qml.qrc
src/qtSeedUI/qml/elements/: PatientDialogField.qml  PatientListDelegate.qml
src/qtSeedUI/utilities/: PatientHelper.h  QPatient.cpp  QPatient.h
test/: CMakeLists.txt  TestComms.cpp  TestDb.cpp
